cloud/dex/from-kubeflow/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authservice
spec:
  hosts:
    - "*"
  gateways:
    - kubeflow/kubeflow-gateway
  http:
    - match:
        - uri:
            prefix: /authservice
      route:
        - destination:
            port:
              number: 80
            host: authservice.istio-system.svc.cluster.local
