cloud/dex/from-kubeflow/request-visualizer.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: request-visualizer
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: request-visualizer
  namespace: request-visualizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: request-visualizer
  template:
    metadata:
      labels:
        app: request-visualizer
    spec:
      containers:
      - name: app
        image: python:3.10-slim-bullseye
        command:
        - python
        - -c
        - |
          [...]
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: request-visualizer
  namespace: request-visualizer
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: request-visualizer
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: request-visualizer
  namespace: request-visualizer
spec:
  hosts:
  - "*"
  gateways:
  - kubeflow/kubeflow-gateway
  http:
  - match:
    - uri:
        prefix: /request-visualizer
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 80
        host: request-visualizer
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: request-visualizer
  namespace: request-visualizer
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: request-visualizer
  rules:
  - {}
